--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ document.getElementById(&quot;demo&quot;).innerHTML = myFunction(4, 3);
     <footer id="footer" class="footer text-center">
         <div class="container">
             <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
-            <small class="copyright">Thanks to <a href="https://themes.3rdwavemedia.com/" target="_blank">Xiaoying Riley</a> for the bootstrap theme.</small>
+            <small class="copyright">Thanks to <a href="https://themes.3rdwavemedia.com/" target="_blank">Xiaoying Riley</a> for the theme.</small>
 
         </div><!--//container-->
     </footer><!--//footer-->
