First bits of preliminary example added.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <section id="abstract" class="doc-section">
                                 <h2 class="section-title">Abstract</h2>
                                 <div class="section-block">
-                                  <p>
+                                  <p class="text-justify">
                                     This project covers <a href="assets/files/megiddo.pdf" target="_blank">Nimrod Megiddo's paper</a>
                                     <a class="scrollto" href="#ref-1">[1]</a> that presents a generalisation of how parallelism can benefit
                                     the design of serial algorithms in computational problems. In many cases, a good parallel algorithm for one problem
@@ -61,9 +61,10 @@
                                     <br>
                                     <br>
                                     We start by (visually) exploring Meggido's preliminary example that demonstrates his general method, known as parametric search.
-                                    The method uses a <i>decision algorithm</i>, <i>e.g.</i> an algorithm that checks if a given parameter \( \lambda \leq 0 \)
-                                    or \( \lambda \geq 0 \), to solve an <i>optimization problem</i>, <i>e.g.</i> an algorithm that determines a \( \lambda \) such that
-                                    \( F(\lambda) = 0 \) for a given function \( F \). Analysising the example in depth allows us to build up the necessary intuition to proceed. 
+                                    The method uses a <i>decision algorithm</i>, <i>i.e.</i> an algorithm that checks if a given condition
+                                    holds or not, to solve an <i>optimization problem</i>, <i>i.e.</i> an algorithm that determines an optimal solution for a problem.
+                                    By cleverly running the decision problem as a concurrent process, Megiddo shows
+                                    that parallelism can achieve a lower theoretical bound in some cases.
                                     <br>
                                     <br>
                                     Next, a more advanced setting is explored in the context of the <i>Minimum Ratio Cycle problem </i> (MRC),
@@ -75,8 +76,9 @@
                                     <br>
                                     Finally, we present an attempt at an implementation of the parameterization method for the
                                     MRC, inspired on <a href="assets/files/megiddo_earlier.pdf" target="_blank">Megiddo's earlier work</a>
-                                    <a class="scrollto" href="#ref-3">[3]</a> and using Mozilla’s Web Worker API for
-                                    multi-threaded javascript programs.
+                                    <a class="scrollto" href="#ref-3">[3]</a> and using
+                                    <a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Workers_API" target="_blank">Mozilla’s Web Worker API</a> for
+                                    concurrent javascript programming.
 
                                   </p>
                                 </div>
@@ -84,9 +86,66 @@
                             <section id="preliminary" class="doc-section">
                                 <h2 class="section-title">Megiddo's Preliminary Example</h2>
                                 <div class="section-block">
-                                  <p>
-                                    ...
+                                  <p class="text-justify">
+                                    <!-- Properly define the function. -->
+                                    Let \( \{f_{i}(\lambda), \dots, f_{n}(\lambda) \ | \ i = 1 \dots n \} \)
+                                    be a set of pairwise distinct functions of \( \lambda \) such that
+                                    \( f_{i}(\lambda) = a_{i} + b_{i}\lambda \ | \ b_{i} > 0 \).
+                                    Next, let \( F(\lambda) \) denote the median of the set \( \{f_{i}(\lambda), \dots, f_{n}(\lambda) \} \)
+                                    for every \( \lambda \in \mathbb{R} \).
                                   </p>
+                                  <p class="text-justify">
+                                    <b>Function Visualisation:
+                                        \( f_{1}(\lambda) = a_{1} + b_{1}\lambda \ \wedge \
+                                           f_{2}(\lambda) = a_{2} + b_{2}\lambda\) </b>
+                                    <br> <br>
+                                    &lt; Insert interactive function visualisation &gt;
+                                    <ul>
+                                      <li> \( a_{1}, a_{2} \) can be varied over an interval with slider. </li>
+                                      <li> \( b_{1}, b_{2} \) can be varied over an interval with slider. </li>
+                                      <li> \( \lambda \) corresponds with the x axis.  </li>
+                                      <li> A critical point \( \lambda_{ij} \) is shown on the intersection. </li>
+
+                                    </ul>
+                                  </p>
+                                  <p class="text-justify">
+                                    <b>Function Visualisation: \( F(\lambda) \)</b>
+                                    <br> <br>
+                                    &lt; Insert interactive function visualisation &gt;
+                                    <ul>
+                                      <li> Each \( a, b \) are drawn uniformly in an interval. This interval can be adapted using sliders. </li>
+                                      <li> \( n\) can be chosen. </li>
+                                      <li> Reset button for new draw. </li>
+                                    </ul>
+                                    Explain why:
+                                    <ul>
+                                      <li> \( F(\lambda) \) is a piecewise linear function. </li>
+                                      <li> \( F(\lambda) \) is a monotone increasing function with \( O(n^{2}) \) breakpoints. </li>
+                                      <li> \( F(\lambda) \) can be evaluated in (\ O(n) \) comparisons using quick median. </li>
+                                    </ul>
+                                  </p>
+
+                                  <p class="text-justify">
+                                    <b>Optimization Algorithm</b>
+                                    <br><br>
+                                    Introduce the optimization problem to find a \( \lambda \) such that \( F(\lambda) = 0 \) and
+                                    explain why every breakpoint of \( F \) is equal to one of the \( \lambda_{ij} \)'s.
+                                    Here we should get to how a decision algorithm can be used to solve this optimization problem.
+                                    This should also be analysed theoretically, to show that there is a speedup possible.
+                                  </p>
+
+                                  <!--
+
+                                  <p>
+                                      \( \{f_{1}(\lambda), f_{2}(\lambda), ..., f_{n}(\lambda) \} \) -->
+                                    <!-- Understand how Megiddo maps from a parallel to a serial problem.
+                                  -->
+                                  <!--
+                                    <i>e.g.</i> an algorithm that checks if a given parameter \( \lambda \leq 0 \)
+                                   or \( \lambda \geq 0 \), to solve an <i>optimization problem</i>, <i>e.g.</i> a search algorithm that determines a \( \lambda \) such that
+                                   \( F(\lambda) = 0 \) for a given function \( F \).
+                                 </p>
+                                -->
                                 </div>
                             </section><!--//doc-section-->
                             <section id="references" class="doc-section">
@@ -99,7 +158,7 @@
                                         <p>[1]</p>
                                       </div>
                                       <div class="col-11">
-                                        <p>
+                                        <p class="text-justify">
                                           Megiddo, N. (1981, October). Applying parallel computation algorithms in the design of serial algorithms.
                                           In 22nd Annual Symposium on Foundations of Computer Science (sfcs 1981) (pp. 399-408). IEEE.
                                         </p>
@@ -112,7 +171,7 @@
                                         <p>[2]</p>
                                       </div>
                                       <div class="col-11">
-                                        <p>
+                                        <p class="text-justify">
                                           Dantzig, G. B., Blattner, W. and Rao, M. R. (1967). Finding a Cycle in a Graph
                                           with Minimum Cost to Time Ratio with Application to a Ship Routing Problem.
                                           In Theory of Graphs, P. Rosenstiehl, ed. Dunod, Paris, and Gordon and
@@ -128,7 +187,7 @@
                                         <p>[3]</p>
                                       </div>
                                       <div class="col-11">
-                                        <p>
+                                        <p class="text-justify">
                                             Megiddo, N. (1978, May).
                                             Combinatorial optimization with rational objective functions.
                                             In Proceedings of the tenth annual ACM symposium on Theory of computing (pp. 1-12). ACM.
