--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <meta name="author" content="Quinten Rosseel">
     <link rel="shortcut icon" href="favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
+    <!-- p5 JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
+
+    <!-- Javacsript for function visualisation. -->
+    <script src= "assets/js/function_vis.js"></script>
+    <script src= "assets/js/p5.dom.js"></script>
+
     <!-- FontAwesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.1.1/js/all.js" integrity="sha384-BtvRZcyfv4r0x/phJt9Y9HhnN5ur1Z+kZbKVgzVBAlQZX4jvAuImlIz+bG7TS00a" crossorigin="anonymous"></script>
 
@@ -92,31 +100,168 @@
                                     be a set of pairwise distinct functions of \( \lambda \) such that
                                     \( f_{i}(\lambda) = a_{i} + b_{i}\lambda \ | \ b_{i} > 0 \).
                                     Next, let \( F(\lambda) \) denote the median of the set \( \{f_{i}(\lambda), \dots, f_{n}(\lambda) \} \)
-                                    for every \( \lambda \in \mathbb{R} \).
+                                    for every \( \lambda \in \mathbb{R} \). Finally, let \( \lambda_{ij} \) denote the intersection of
+                                    two distinct functions \( f_{i} \) and \( f_{j} \) in the set \( \{f_{i}(\lambda), \dots, f_{n}(\lambda) \} \),
+                                    such that \( a_{i} + b_{i}\lambda_{ij} = a_{j} + b_{j}\lambda_{ij} \) with \( i \neq j\).
                                   </p>
                                   <p class="text-justify">
-                                    <b>Function Visualisation:
-                                        \( f_{1}(\lambda) = a_{1} + b_{1}\lambda \ \wedge \
-                                           f_{2}(\lambda) = a_{2} + b_{2}\lambda\) </b>
+                                    <b>Function Visualisation 1</b>
                                     <br> <br>
-                                    &lt; Insert interactive function visualisation &gt;
-                                    <ul>
-                                      <li> \( a_{1}, a_{2} \) can be varied over an interval with slider. </li>
-                                      <li> \( b_{1}, b_{2} \) can be varied over an interval with slider. </li>
-                                      <li> \( \lambda \) corresponds with the x axis.  </li>
-                                      <li> A critical point \( \lambda_{ij} \) is shown on the intersection. </li>
+                                    To showcase how functions from the set \( \{f_{i}(\lambda), \dots, f_{n}(\lambda) \} \) behave, consider
+                                    an interactive visualisation of two functions \( f_{1}(\lambda) = a_{1} + b_{1}\lambda \ \) and \( \
+                                    f_{2}(\lambda) = a_{2} + b_{2}\lambda \ \) below.
 
-                                    </ul>
-                                  </p>
+                                    Notice that \( b_{i} \) is constrained to be positive
+                                    and that the intersection \( \lambda_{12} \) is a critical point for the function \( F(\lambda) \).
+                                    More on the next visualisation.
+
+                                    <br><br>
+
+                                    <!-- Function Sliders -->
+                                    <div class="container">
+                                      <div class="row">
+
+                                        <div class="col-3 text-center">
+                                          <label for="a_1_slider_1">\( a_{1} \)</label>
+                                          <div class="d-flex justify-content-center my-4">
+                                             <span class="font-weight-bold indigo-text mr-2 mt-1">-10</span>
+                                              <form class="range-field w-75">
+                                               <input class="custom-range" type="range" step="1" min="0" max="20" id="a_1_slider_1" />
+                                              </form>
+                                           <span class="font-weight-bold indigo-text ml-2 mt-1">10</span>
+                                         </div>
+
+                                        </div>
+                                        <div class="col-3 text-center">
+                                          <label for="b_1_slider_1">\( b_{1} \)</label>
+                                          <div class="d-flex justify-content-center my-4">
+                                             <span class="font-weight-bold indigo-text mr-2 mt-1">0</span>
+                                              <form class="range-field w-75">
+                                               <input class="custom-range" type="range" step="1" min="0" max="20" id="b_1_slider_1" />
+                                              </form>
+                                           <span class="font-weight-bold indigo-text ml-2 mt-1">20</span>
+                                         </div>
+                                        </div>
+
+                                        <div class="col-3 text-center">
+                                          <label for="a_2_slider_1">\( a_{2} \)</label>
+                                          <div class="d-flex justify-content-center my-4">
+                                             <span class="font-weight-bold indigo-text mr-2 mt-1">-10</span>
+                                                <form class="range-field w-75">
+                                                 <input class="custom-range" type="range" step="1" min="0" max="20" id="a_2_slider_1" />
+                                                </form>
+                                            <span class="font-weight-bold indigo-text ml-2 mt-1">10</span>
+                                          </div>
+                                        </div>
+
+                                        <div class="col-3 text-center">
+                                          <label for="b_2_slider_1">\( b_{2} \)</label>
+                                          <div class="d-flex justify-content-center my-4">
+                                             <span class="font-weight-bold indigo-text mr-2 mt-1">0</span>
+                                                <form class="range-field w-75">
+                                                 <input class="custom-range" type="range" step="1" min="0" max="20" id="b_2_slider_1" />
+                                                </form>
+                                            <span class="font-weight-bold indigo-text ml-2 mt-1">20</span>
+                                          </div>
+                                        </div>
+
+
+                                      </div>
+                                    </div>
+                                    <br><br>
+                                    <!-- Function Visualisation -->
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-12 text-center" id="func-vis-1">
+                                            </div>
+                                        </div>
+                                      </div>
+                                    </p>
+
                                   <p class="text-justify">
-                                    <b>Function Visualisation: \( F(\lambda) \)</b>
+                                    <b>Function Visualisation 2</b>
                                     <br> <br>
-                                    &lt; Insert interactive function visualisation &gt;
-                                    <ul>
+                                    In the example below \( F(\lambda) \) is shown with all \( a_{i} \)'s, uniformly drawn from
+                                    an interval \( [a_{min}, a_{max}] \) and all \( b_{i} \)'s, uniformly drawn from
+                                    an interval \( [b_{min}, b_{max}] \) with \( b_{min}, b_{max} > 0 \). The last slider for \( n \) determines the number of functions in the set
+                                    \( \{f_{i}(\lambda), \dots, f_{n}(\lambda) \} \).
+
+
+                                    <!-- Function Sliders -->
+                                    <div class="container">
+                                      <div class="row">
+                                        <div class="col-3 text-center">
+                                          <label for="a_1_slider_2">\( a_{min} \)</label>
+                                            <div class="d-flex justify-content-center my-4">
+                                               <span class="font-weight-bold indigo-text mr-2 mt-1">-10</span>
+                                                <form class="range-field w-75">
+                                                 <input class="custom-range range-2" type="range" step="1" min="0" max="10" id="a_1_slider_2" />
+                                                </form>
+                                             <span class="font-weight-bold indigo-text ml-2 mt-1">0</span>
+                                           </div>
+                                        </div>
+                                         <div class="col-3 text-center">
+                                           <label for="a_2_slider_2">\( a_{max} \)</label>
+                                           <div class="d-flex justify-content-center my-4">
+                                              <span class="font-weight-bold indigo-text mr-2 mt-1">0</span>
+                                                 <form class="range-field w-75">
+                                                  <input class="custom-range range-2" type="range" step="1" min="10" max="20" id="a_2_slider_2" />
+                                                 </form>
+                                             <span class="font-weight-bold indigo-text ml-2 mt-1">10</span>
+                                           </div>
+                                         </div>
+                                        <div class="col-3 text-center">
+                                          <label for="b_1_slider_2">\( b_{min} \)</label>
+                                          <div class="d-flex justify-content-center my-4">
+                                             <span class="font-weight-bold indigo-text mr-2 mt-1">0</span>
+                                              <form class="range-field w-75">
+                                               <input class="custom-range range-2" type="range" step="1" min="0" max="10" id="b_1_slider_2" />
+                                              </form>
+                                           <span class="font-weight-bold indigo-text ml-2 mt-1">10</span>
+                                         </div>
+                                        </div>
+
+                                        <div class="col-3 text-center">
+                                          <label for="b_2_slider_2">\( b_{max} \)</label>
+                                          <div class="d-flex justify-content-center my-4">
+                                             <span class="font-weight-bold indigo-text mr-2 mt-1">10</span>
+                                                <form class="range-field w-75">
+                                                 <input class="custom-range range-2" type="range" step="1" min="10" max="20" id="b_2_slider_2" />
+                                                </form>
+                                            <span class="font-weight-bold indigo-text ml-2 mt-1">20</span>
+                                          </div>
+                                        </div>
+                                      </div>
+                                      <div class="row">
+                                        <div class="col-12">
+                                          <div class="col-3 mx-auto text-center">
+                                            <label for="n_slider_2">\( n \)</label>
+                                            <div class="d-flex justify-content-center my-4 text-center">
+                                               <span class="font-weight-bold indigo-text mr-2 mt-1">0</span>
+                                                  <form class="range-field w-75">
+                                                   <input class="custom-range range-2" type="range" step="1" min="0" max="10" id="n_slider_2" />
+                                                  </form>
+                                              <span class="font-weight-bold indigo-text ml-2 mt-1">10</span>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                    <br><br>
+                                    <!-- Function Visualisation -->
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-12 text-center" id="func-vis-2">
+                                            </div>
+                                        </div>
+                                      </div>
+                                    <!-- <ul>
                                       <li> Each \( a, b \) are drawn uniformly in an interval. This interval can be adapted using sliders. </li>
                                       <li> \( n\) can be chosen. </li>
                                       <li> Reset button for new draw. </li>
-                                    </ul>
+                                    </ul> -->
+
+                                    <br> <br>
                                     Explain why:
                                     <ul>
                                       <li> \( F(\lambda) \) is a piecewise linear function. </li>
