--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                       </div>
                                     <br><br>
                                     It's easy to see now that \( F(\lambda) \) is a piecewise linear function that lies on the line
-                                    of the function that evaluates to the median for a particular \( \lambda \). As the \( {b_{i} \)'s are positive,
+                                    of the function that evaluates to the median for a particular \( \lambda \). As the \( b_{i} \)'s are positive,
                                     this means that each segment of the function is monotone-increasing. In piesewise linear functions,
                                     the points where the slope of the function changes are known as breakpoints. Given that we know that a function
                                     of \( n \) lines has
