Style update of sliders.

--- a/index.html
+++ b/index.html
@@ -122,65 +122,64 @@
                                     <!-- Function Sliders -->
                                     <div class="container">
                                       <div class="row">
-
-                                        <div class="col-3 text-center">
-                                          <label for="a_1_slider_1">\( a_{1} \)</label>
-                                          <div class="d-flex justify-content-center my-4">
-                                             <span class="font-weight-bold indigo-text mr-2 mt-1">-10</span>
-                                              <form class="range-field w-75">
-                                               <input value="12" class="custom-range range-1" type="range" step="1" min="0" max="20" id="a_1_slider_1" />
-                                              </form>
-                                           <span class="font-weight-bold indigo-text ml-2 mt-1">10</span>
-                                         </div>
-
-                                        </div>
-                                        <div class="col-3 text-center">
-                                          <label for="b_1_slider_1">\( b_{1} \)</label>
-                                          <div class="d-flex justify-content-center my-4">
-                                             <span class="font-weight-bold indigo-text mr-2 mt-1">0</span>
-                                              <form class="range-field w-75">
-                                               <input value="0" class="custom-range range-1" type="range" step="1" min="0" max="20" id="b_1_slider_1" />
-                                              </form>
-                                           <span class="font-weight-bold indigo-text ml-2 mt-1">20</span>
-                                         </div>
-                                        </div>
-
-                                        <div class="col-3 text-center">
-                                          <label for="a_2_slider_1">\( a_{2} \)</label>
-                                          <div class="d-flex justify-content-center my-4">
-                                             <span class="font-weight-bold indigo-text mr-2 mt-1">-10</span>
-                                                <form class="range-field w-75">
-                                                 <input value="20" class="custom-range range-1" type="range" step="1" min="0" max="20" id="a_2_slider_1" />
-                                                </form>
-                                            <span class="font-weight-bold indigo-text ml-2 mt-1">10</span>
-                                          </div>
-                                        </div>
-
-                                        <div class="col-3 text-center">
-                                          <label for="b_2_slider_1">\( b_{2} \)</label>
-                                          <div class="d-flex justify-content-center my-4">
-                                             <span class="font-weight-bold indigo-text mr-2 mt-1">0</span>
-                                                <form class="range-field w-75">
-                                                 <input value="4" class="custom-range range-1" type="range" step="1" min="0" max="20" id="b_2_slider_1" />
-                                                </form>
-                                            <span class="font-weight-bold indigo-text ml-2 mt-1">20</span>
-                                          </div>
-                                        </div>
-                                      </div>
-
-                                      <div class="row">
-                                          <div class="col-3 text-center offset-3">
-                                            <label for="a_3_slider_1">\( a_{3} \)</label>
-                                            <div class="d-flex justify-content-center my-4 text-center">
+                                          <div class="col-4 text-center">
+                                            <label for="a_1_slider_1">\( a_{1} \)</label>
+                                            <div class="d-flex justify-content-center my-4">
                                                <span class="font-weight-bold indigo-text mr-2 mt-1">-10</span>
+                                                <form class="range-field w-75">
+                                                 <input value="12" class="custom-range range-1" type="range" step="1" min="0" max="20" id="a_1_slider_1" />
+                                                </form>
+                                             <span class="font-weight-bold indigo-text ml-2 mt-1">10</span>
+                                           </div>
+                                         </div>
+
+                                           <div class="col-4 text-center">
+                                             <label for="a_2_slider_1">\( a_{2} \)</label>
+                                             <div class="d-flex justify-content-center my-4">
+                                                <span class="font-weight-bold indigo-text mr-2 mt-1">-10</span>
+                                                   <form class="range-field w-75">
+                                                    <input value="20" class="custom-range range-1" type="range" step="1" min="0" max="20" id="a_2_slider_1" />
+                                                   </form>
+                                               <span class="font-weight-bold indigo-text ml-2 mt-1">10</span>
+                                             </div>
+                                           </div>
+
+                                           <div class="col-4 text-center">
+                                             <label for="a_3_slider_1">\( a_{3} \)</label>
+                                             <div class="d-flex justify-content-center my-4 text-center">
+                                                <span class="font-weight-bold indigo-text mr-2 mt-1">-10</span>
+                                                   <form class="range-field w-75">
+                                                    <input value="0" class="custom-range range-1" type="range" step="1" min="0" max="20" id="a_3_slider_1" />
+                                                   </form>
+                                               <span class="font-weight-bold indigo-text ml-2 mt-1">10</span>
+                                             </div>
+                                           </div>
+                                      </div>
+                                        <div class="row">
+                                          <div class="col-4 text-center">
+                                            <label for="b_1_slider_1">\( b_{1} \)</label>
+                                            <div class="d-flex justify-content-center my-4">
+                                               <span class="font-weight-bold indigo-text mr-2 mt-1">0</span>
+                                                <form class="range-field w-75">
+                                                 <input value="0" class="custom-range range-1" type="range" step="1" min="0" max="20" id="b_1_slider_1" />
+                                                </form>
+                                             <span class="font-weight-bold indigo-text ml-2 mt-1">20</span>
+                                           </div>
+                                          </div>
+
+
+                                          <div class="col-4 text-center">
+                                            <label for="b_2_slider_1">\( b_{2} \)</label>
+                                            <div class="d-flex justify-content-center my-4">
+                                               <span class="font-weight-bold indigo-text mr-2 mt-1">0</span>
                                                   <form class="range-field w-75">
-                                                   <input value="0" class="custom-range range-1" type="range" step="1" min="0" max="20" id="a_3_slider_1" />
+                                                   <input value="4" class="custom-range range-1" type="range" step="1" min="0" max="20" id="b_2_slider_1" />
                                                   </form>
-                                              <span class="font-weight-bold indigo-text ml-2 mt-1">10</span>
+                                              <span class="font-weight-bold indigo-text ml-2 mt-1">20</span>
                                             </div>
                                           </div>
 
-                                          <div class="col-3 text-center">
+                                          <div class="col-4 text-center">
                                             <label for="b_3_slider_1">\( b_{3} \)</label>
                                             <div class="d-flex justify-content-center my-4 text-center">
                                                <span class="font-weight-bold indigo-text mr-2 mt-1">0</span>
@@ -190,8 +189,9 @@
                                               <span class="font-weight-bold indigo-text ml-2 mt-1">20</span>
                                             </div>
                                           </div>
-
                                       </div>
+
+
                                     </div>
                                     <br><br>
                                     <!-- Function Visualisation -->
@@ -209,6 +209,8 @@
                                     of \( n \) lines has
                                     <a href="https://math.stackexchange.com/questions/270937/how-can-you-construct-as-many-intersections-as-possible-with-n-lines" target="_blank">
                                       at most \( \frac{n^{2} - n }{2} \) intersections</a>, the upper bound for breakpoints is \( O(n^{2}) \).
+                                    <br><br>
+                                    Using the
 
 
                                     </p>
